--- a/css/apropos.css
+++ b/css/apropos.css
@@ -2,10 +2,76 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background: rgb(204, 204, 204);
-    background: radial-gradient(circle,
-            rgba(204, 204, 204, 1) 0%,
-            rgba(255, 255, 255, 1) 100%);
+    background: rgb(240, 240, 240);
+}
+
+/* DARK MODE */
+.dark-mode {
+
+    background: rgb(43, 43, 43);
+    color: white;
+}
+
+.dark-mode #avis .card {
+    background-color: #333333;
+    color: white;
+}
+
+.dark-mode .globalFooter {
+    background-color: #333333;
+    color: white;
+    border-top: 1px solid rgb(255, 255, 255);
+}
+
+.dark-mode .navbar {
+    background-color: #333333;
+    color: white;
+}
+
+.dark-mode .navbar a {
+    color: white;
+}
+
+.dark-mode .navbar a:hover {
+    color: #a0a0a0;
+}
+
+.dark-mode .nav-link.active {
+    color: #a0a0a0;
+}
+
+.dark-mode .navbar img {
+    filter: invert(100%);
+}
+
+.dark-mode .buttonContactFin{
+    filter: invert(100%);
+}
+
+
+
+.dark-mode .navbar {
+    border-bottom: 1px solid rgb(255, 255, 255)
+}
+
+.dark-mode #toggleButton{
+    filter: invert(100%);
+}
+
+.dark-mode a{
+    color: white;
+}
+
+/* FIN DARK MODE */
+
+.navbar{
+    border-bottom: 1px solid rgb(0, 0, 0)
+}
+
+.globalFooter {
+    border-top: 1px solid rgb(0, 0, 0);
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
 }
 
 .nav-link {
@@ -16,13 +82,9 @@ body {
     flex: 1;
 }
 
-.globalFooter {
-    background-color: #212529;
-    color: white;
-}
-
 a {
     text-decoration: none;
+    color: black;
 }
 
 h1 {
@@ -31,12 +93,6 @@ h1 {
     margin: 20px;
 }
 
-#carouselExample {
-    margin: 0 auto;
-    /* Centre horizontalement le carousel */
-    width: 100%;
-    /* Ajustez la largeur selon vos besoins */
-}
 
 #avis {
     padding-top: 40px;
