--- a/style.css
+++ b/style.css
@@ -2,10 +2,67 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background: rgb(204, 204, 204);
-    background: radial-gradient(circle,
-            rgba(204, 204, 204, 1) 0%,
-            rgba(255, 255, 255, 1) 100%);
+    background: rgb(240, 240, 240);
+}
+
+/* DARK MODE */
+.dark-mode {
+    background: rgb(43, 43, 43);
+    color: white
+}
+
+.dark-mode #avis .card {
+    background-color: #333333;
+    color: white;
+}
+
+.dark-mode .globalFooter {
+    background-color: #333333;
+    color: white;
+    border-top: 1px solid rgb(255, 255, 255);
+}
+
+.dark-mode .navbar {
+    background-color: #333333;
+    color: white;
+}
+
+.dark-mode .navbar a {
+    color: white;
+}
+
+.dark-mode .navbar a:hover {
+    color: #a0a0a0;
+}
+
+.dark-mode .nav-link.active {
+    color: #a0a0a0;
+}
+
+.dark-mode .navbar img {
+    filter: invert(100%);
+}
+
+.dark-mode #imgPartenaire img {
+    filter: invert(100%);
+}
+
+.dark-mode .navbar {
+    border-bottom: 1px solid rgb(255, 255, 255)
+}
+
+.dark-mode #toggleButton{
+    filter: invert(100%);
+}
+
+.dark-mode a{
+    color: white;
+}
+
+/* FIN DARK MODE */
+
+.navbar {
+    border-bottom: 1px solid rgb(0, 0, 0)
 }
 
 .nav-link {
@@ -17,12 +74,15 @@ body {
 }
 
 .globalFooter {
-    background-color: #212529;
-    color: white;
+    border-top: 1px solid rgb(0, 0, 0);
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
 }
+
 
 a {
     text-decoration: none;
+    color: rgb(0, 0, 0);
 }
 
 h1 {
